ext/-test-/win32/dln/empty/empty.c
@@ -1,0 +1,4 @@
+void
+Init_empty(void)
+{
+}
